--- a/sheldon/plugins.toml
+++ b/sheldon/plugins.toml
@@ -1,4 +1,18 @@
 shell = "zsh"
 
+# pure テーマ
+[plugins.pure]
+github = "sindresorhus/pure"
+use = ["async.zsh", "pure.zsh"]
+
+# 構文ハイライト
+[plugins.zsh-syntax-highlighting]
+github = "zsh-users/zsh-syntax-highlighting"
+
+# 補完
+[plugins.zsh-completions]
+github = "zsh-users/zsh-completions"
+
+# オートサジェスト
 [plugins.zsh-autosuggestions]
 github = "zsh-users/zsh-autosuggestions"
