--- a/sheldon/plugins.toml
+++ b/sheldon/plugins.toml
@@ -1,18 +1,34 @@
+# sheldon/plugins.toml
 shell = "zsh"
 
-# pure テーマ
-[plugins.pure]
-github = "sindresorhus/pure"
-use = ["async.zsh", "pure.zsh"]
+# oh-my-zshのgitプラグイン
+[plugins.git]
+github = "ohmyzsh/ohmyzsh"
+dir = "plugins/git"
 
-# 構文ハイライト
+# シンタックスハイライト
 [plugins.zsh-syntax-highlighting]
 github = "zsh-users/zsh-syntax-highlighting"
 
-# 補完
+# Fishライクな自動補完
+[plugins.zsh-autosuggestions]
+github = "zsh-users/zsh-autosuggestions"
+
+# zshの補完を強化
 [plugins.zsh-completions]
 github = "zsh-users/zsh-completions"
 
-# オートサジェスト
-[plugins.zsh-autosuggestions]
-github = "zsh-users/zsh-autosuggestions"
+# ディレクトリ移動を効率化するz
+[plugins.z]
+github = "rupa/z"
+file = "z.sh"
+
+# エイリアス管理
+[plugins.zsh-abbr]
+github = "olets/zsh-abbr"
+branch = "main"
+
+# プロンプトテーマ
+[plugins.spaceship-prompt]
+github = "denysdovhan/spaceship-prompt"
+use = ["spaceship.zsh-theme"]
