--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  check_install.sh:
+  check-install.sh:
     name: Test install.sh
     runs-on: macos-latest
     steps:
