ci: :ferris_wheel: .消した

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  check-install.sh:
+  check-install-sh:
     name: Test install.sh
     runs-on: macos-latest
     steps:
