feat: :sparkles: czg周りの追加

--- a/mise/mise.toml
+++ b/mise/mise.toml
@@ -4,3 +4,5 @@ node = "latest"
 python = "latest"
 rust = "latest"
 "npm:@google/gemini-cli" = "latest"
+"npm:cz-git" = "latest"
+"npm:czg" = "latest"
