feat: :sparkles: bun

--- a/mise/mise.toml
+++ b/mise/mise.toml
@@ -3,6 +3,7 @@ go = "latest"
 node = "latest"
 python = "latest"
 rust = "latest"
+bun = "latest"
 "npm:@google/gemini-cli" = "latest"
 "npm:cz-git" = "latest"
 "npm:czg" = "latest"
